2004-02-20  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/desktop-affine.h, src/desktop-affine.cpp
	(sp_desktop_w2d_xy_point, sp_desktop_d2w_xy_point,
	sp_desktop_w2doc_xy_point, sp_desktop_doc2w_xy_point,
	sp_desktop_d2doc_xy_point, sp_desktop_doc2d_xy_point,
	sp_desktop_root2dt_xy_point, sp_desktop_dt2root_xy_point):
	Remove old NRPoint versions of these functions.

	* src/select-toolbar.cpp:
	* src/toolbox.cpp:
	* src/widgets/spw-utilities.cpp:
	Remove unused #include sp-item-transform.h.

	* src/sp-item-transform.cpp (sp_item_rotate_rel): NR::Matrix'ification.

	* src/sp-item-transform.h, src/sp-item-transform.cpp
	(sp_item_scale_rel, sp_item_skew_rel): Remove these unused functions.

	* src/sp-item-transform.h, src/sp-item-transform.cpp
	(sp_item_rotate_rel, sp_item_move_rel): Change from pair of points to
	NR::rotate and NR::translate respectively.  Update callers.

	* src/node-context.cpp (sp_node_context_root_handler):
	* src/rect-context.cpp (sp_rect_context_root_handler):
	* src/zoom-context.cpp (sp_zoom_context_root_handler):
	NR::Point'ification and var cleanup.

	* src/event-context.cpp
	(sp_event_context_private_root_handler, set_event_location):
	* src/dialogs/align.cpp (sp_align_arrange_clicked): 
	NR::Point'ification.

	* src/desktop.h (sp_desktop_zoom_relative_keep_point,
	sp_desktop_scroll_world): Add NR::Point version.

2004-02-19  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/Makefile.am: sp-item-rm-unsatisfied-cns.cpp,
	sp-item-rm-unsatisfied-cns.h, sp-guide-attachment.h,
	sp-item-notify-moveto.cpp, sp-item-notify-moveto.h,
	sp-guide-constraint.h, satisfied-guide-cns.cpp,
	satisfied-guide-cns.h, sp-item-update-cns.cpp,
	sp-item-update-cns.h: New files.
	* src/desktop-events.cpp (sp_dt_guide_event):
	* src/seltrans.cpp (sp_sel_trans_ungrab):
	* src/sp-guide.cpp (sp_guide_moveto, sp_guide_remove):
	* src/sp-guide.h:
	* src/sp-item.cpp (sp_item_set):
	* src/sp-item.h: